src/pages/url-list/url-list.less
seo-url-list {
    .label.keypath {
        display: inline-block;
        font-size: @font-size-small;
        font-weight: 200;
        margin-top: @padding-small-vertical;
        text-transform: none;

        .icon-key {
            vertical-align: middle;
        }
    }

    // Filters
    .filters {
        border-bottom: 1px solid #D6D6D6;
        margin: 0 0 21px 0;
        padding-bottom: 10px;

        .btn-link:hover, .btn-link:focus {
            text-decoration: none;
        }
    }

    pui-filter-menu {
        display: inline-block;

        .filter-trigger-button-label {
            text-transform: capitalize;
        }

        // Green label
        .added-label {
            .label;
            .label-alt;
            .label-success;
        }
        
        // Blue label
        .modified-label {
            .label;
            .label-alt;
            .label-primary;
        }

        // Red label
        .end-of-life-label {
            .label;
            .label-alt;
            .label-danger;
        }
    }

    pui-filter-menu:nth-child(2) {
        .popover-content {
            width: 400px;

            .secondaryFilterOptions {
                height: 560px;
                overflow: scroll;
                margin: 0 0 25px 35px;
            }
        }
    }
}

